# perso-2026a-guisdapi

./: .gitignore  README.md  book-tracker.cabal  books.db  index.html  livro.json
.devcontainer/: Dockerfile  devcontainer.json
src/: Logic.hs  Main.hs  Store.hs  Types.hs
src/02-scotty-hello-name/: helloNameScotty.hs
src/04-scotty-random-advice-json/: randomAdviceServiceJson.hs
src/06-scotty-sqlite/: Main.hs  demo-scotty-sqlite.cabal  test-get-users.sh  test-post-user.sh
test/: Spec.hs
