name:                book-tracker
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable book-tracker
  main-is:             Main.hs
  other-modules:       Types, Logic, Store
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5,
                       scotty,
                       aeson,
                       text,
                       wai-extra,
                       http-types,
                       sqlite-simple,
                       wai-cors,
                       warp
  default-language:    Haskell2010
  ghc-options:         -threaded

test-suite book-tracker-tests
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test, src
  other-modules:       Logic, Types
  build-depends:       base >= 4.7 && < 5,
                       HUnit,
                       aeson,
                       sqlite-simple
  default-language:    Haskell2010